fix: disable webkit appearance for search button on ios devices

--- a/static/css/blog-galeo-me.css
+++ b/static/css/blog-galeo-me.css
@@ -193,6 +193,7 @@ input.search-button {
   -moz-border-radius: 2px;
   border-radius: 2px;
   background-color: #139;
+  -webkit-appearance: none;
 }
 /* end of search box */
 
